firebase and gcp deploy
